fix primary-navigation on mobile

--- a/css/template.css
+++ b/css/template.css
@@ -122,7 +122,7 @@ Base Navbar Styles
 }
 
 @media (max-width: 60em) {
-  .nav-end > *:not(#nav-button) {
+  .nav-end > *:not(#nav-button, #primary-navigation) {
     display: none;
   }
 }
